2013-09-08  Julien Bect  <julien.bect@supelec.fr>

	Preserve row names when removing rows from a dataframe.

	* utils/@stk_dataframe/subsref.m: modified
	* utils/@stk_dataframe/subsasgn.m: modified

2013-09-07  Julien Bect  <julien.bect@supelec.fr>

	Rename internal field 'vnames' to 'colnames' in @stk_dataframe.

	* utils/@stk_dataframe/subsasgn.m: modified
	* utils/@stk_dataframe/stk_dataframe.m: modified
	* utils/@stk_dataframe/get.m: modified
	* utils/@stk_dataframe/set.m: modified
	* utils/@stk_dataframe/disp.m: modified
	* utils/@stk_dataframe/bsxfun.m: modified
	* utils/@stk_dataframe/fieldnames.m: modified

	Return an stk_dataframe when using ()-indexing on an stk_dataframe.

	* utils/@stk_dataframe/subsref.m: modified
	* utils/stk_feval.m: modified
	* utils/@stk_dataframe/subsasgn.m: modified (nothing serious)
	* utils/@stk_dataframe/end.m: modified (tests)
	* sampling/stk_sampling_vdc_rr2.m: modified (tests)
	* sampling/stk_sampling_halton_rr2.m: modified (tests)

2013-09-05  Julien Bect  <julien.bect@supelec.fr>

	Plot dataframes with two columns or more.

	* utils/@stk_dataframe/plot.m: modified

2013-09-04  Julien Bect  <julien.bect@supelec.fr>

	Make @stk_dataframe behave more like matrices wrt row/column deletion.

	* utils/@stk_dataframe/subsasgn.m: modified

	Make line lengths equal in README.

	* README: modified

2013-09-01  Julien Bect  <julien.bect@supelec.fr>

	Improve Octave 3.2.x compatibility.

	* utils/@stk_dataframe/max.m: modified
	* utils/@stk_dataframe/apply.m: modified
	* utils/@stk_dataframe/display.m: modified
	* utils/@stk_dataframe/xor.m: modified
	* utils/@stk_dataframe/disp.m: modified
	* utils/@stk_dataframe/stk_normalize.m: modified
	* utils/@stk_dataframe/min.m: modified
	* utils/@stk_factorialdesign/stk_factorialdesign.m: modified
	* utils/@stk_factorialdesign/stk_rescale.m: modified
	* utils/@stk_factorialdesign/stk_normalize.m: modified
	* misc/config/stk_octave_config.m: modified
	* misc/stats/octave_quantile.m: modified